<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/copyright"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <com.walhalla.pillfinder.ui.custom.CustomTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:textAllCaps="true"
                android:textColor="#000000"

                android:textStyle="bold"
                tools:text="@string/app_name" />

            <com.walhalla.pillfinder.ui.custom.CustomTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_screen_title"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"

                android:textColor="@android:color/black"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/hello_world"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView3"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/text_footer"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </ScrollView>
    <!--    android:fontFamily="@font/oxygen_bold"-->
    <com.walhalla.pillfinder.ui.custom.CustomTextView
        android:id="@+id/copyright"
        style="@style/QCustomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/text_footer"
        android:textAlignment="textStart" />
</RelativeLayout>